update swagger